--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "7.0.2",
-    "@dnd-kit/utilities": "3.2.2"
+    "@dnd-kit/utilities": "3.2.2",
+    "@fingerprintjs/fingerprintjs": "^4.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "vite-plugin-env-compatible": "^2.0.1"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vitejs/plugin-react": "^4.2.0",
-    "tailwindcss": "^3.4.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.31",
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "tailwindcss": "^3.4.2",
+    "vite": "^5.2.0"
   }
 }
