--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@
 VITE_SHEET_DB_API="https://sheetdb.io/api/v1/h1bwcita99si3"
 VITE_RECAPTCHA_SITE_KEY="6LdKH1IrAAAAAMptjLHyVbIopGwStWWnNGu7CmwC"
 VITE_DISABLE_SUBMISSION_CHECK=false
+VITE_DISABLE_CAPTCHA=true
