--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,11 @@ updates:
     versioning-strategy: auto
     # Set pull request limits
     open-pull-requests-limit: 10
+    group:
+      # Group all updates together
+      all:
+        patterns:
+          - "*"
     
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
@@ -42,3 +47,8 @@ updates:
           - "*"
     # Set pull request limits
     open-pull-requests-limit: 10
+    group:
+      # Group all updates together
+      all:
+        patterns:
+          - "*"
