docs: document disabling CAPTCHA

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VITE_RECAPTCHA_SITE_KEY="your-recaptcha-site-key"
 
 # Set to false when you want to enable the one-time submission check
 VITE_DISABLE_SUBMISSION_CHECK=true
+
+# Set to true to disable the CAPTCHA locally
+VITE_DISABLE_CAPTCHA=true
