--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: latest
+          run_install: false
+
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: 'npm'
+          node-version: latest
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
 
       - name: Build project
         run: |
@@ -41,12 +47,15 @@ jobs:
           VITE_RECAPTCHA_SITE_KEY=${VITE_RECAPTCHA_SITE_KEY} \
           VITE_DISABLE_SUBMISSION_CHECK=${VITE_DISABLE_SUBMISSION_CHECK} \
           VITE_DISABLE_CAPTCHA=${VITE_DISABLE_CAPTCHA} \
-          npm run build
+          pnpm run build
         env:
           VITE_SHEET_DB_API: ${{ secrets.VITE_SHEET_DB_API }}
           VITE_RECAPTCHA_SITE_KEY: ${{ secrets.VITE_RECAPTCHA_SITE_KEY }}
           VITE_DISABLE_SUBMISSION_CHECK: ${{ vars.VITE_DISABLE_SUBMISSION_CHECK }}
           VITE_DISABLE_CAPTCHA: ${{ vars.VITE_DISABLE_CAPTCHA }}
+
+      - name: Delete png files from dist/mascots
+        run: find dist/mascots -type f -name "*.png" -delete
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
