--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "format": "pnpm format:prettier && pnpm format:standard",
+    "format:prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
+    "format:standard": "standard --fix",
+    "lint": "standard --check"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
@@ -23,7 +27,9 @@
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.17",
     "jsdom": "^26.1.0",
+    "prettier": "*",
     "postcss": "^8.4.31",
+    "standard": "*",
     "tailwindcss": "^3.4.2",
     "vite": "^5.2.0",
     "vitest": "^1.4.0"
