--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.2.3",
     "autoprefixer": "^10.4.17",
     "jsdom": "^26.1.0",
     "postcss": "^8.4.31",
