--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
-    "@dnd-kit/sortable": "7.0.2",
+    "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "vite-plugin-env-compatible": "^2.0.1"
   },
@@ -26,17 +26,17 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "@vitest/coverage-v8": "^3.2.3",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "jsdom": "^26.1.0",
-    "postcss": "^8.4.31",
-    "prettier": "*",
+    "postcss": "^8.5.5",
+    "prettier": "^3.5.3",
     "prettier-config-standard": "^7.0.0",
-    "standard": "*",
-    "tailwindcss": "^3.4.2",
-    "vite": "^5.2.0",
-    "vitest": "^1.4.0"
+    "standard": "^17.1.2",
+    "tailwindcss": "~3",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.3"
   },
   "prettier": "prettier-config-standard"
 }
