--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.5.2",
@@ -34,7 +36,7 @@
     "prettier": "^3.5.3",
     "prettier-config-standard": "^7.0.0",
     "standard": "^17.1.2",
-    "tailwindcss": "~3",
+    "tailwindcss": "~4.1.10",
     "vite": "^6.3.5",
     "vitest": "^3.2.3"
   },
