--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:html": "vitest run --coverage --reporter html",
+    "test:coverage:lcov": "vitest run --coverage --reporter lcov",
+    "test:coverage:json": "vitest run --coverage --reporter json",
+    "test:coverage:clover": "vitest run --coverage --reporter clover",
     "format": "pnpm format:prettier && pnpm format:standard",
     "format:prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,md}'",
     "format:standard": "standard --fix",
@@ -30,6 +35,7 @@
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.5.2",
     "@vitest/coverage-v8": "^3.2.3",
+    "@vitest/ui": "^3.2.3",
     "autoprefixer": "^10.4.21",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.5",
